# mecab

./: CMakeLists.txt  LICENSE  README.md
mecab/example/: example.cpp
mecab/src/: feature_index.cpp  utils.cpp  writer.cpp
